syntax = "proto3";

package message;

message DeleteBucketMsg {
    string index = 1;
}
